--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Bootstrap CSS -->
   <link href="/static/css/style.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png">
-  <title>React Developer - Shueb Anwar</title>
+  <title>React Developer - Rishabh Kumar</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     <div class="row">
       <div class="col-md-4 bg-primary text-light sidebar-container">
         <nav class="navbar navbar-expand-lg sidebar navbar-dark bg-primary p-2 p-md-4 flex-md-column align-items-md-end">
-          <a class="navbar-brand" href="#"><img class="logo-main" src="images/logo-2.svg" alt="Shueb Anwar - Frontend Developer" /></a>
+          <a class="navbar-brand" href="#"><img class="logo-main" src="images/logo-2.svg" alt="Rishabh Kumar - Frontend Developer" /></a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarButtons"
             aria-controls="navbarButtons" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,11 +45,11 @@
               <h4 class="fs-6 d-none d-md-block">Follow me</h4>
               <ul class="nav flex-column flex-md-row gap-2">
                 <li class="nav-item">
-                  <a class="nav-link text-white fs-6 px-3 py-2 p-md-1 d-flex align-items-center gap-3" aria-current="page" href="https://www.linkedin.com/in/shuebanwar/"
+                  <a class="nav-link text-white fs-6 px-3 py-2 p-md-1 d-flex align-items-center gap-3" aria-current="page" href="https://www.linkedin.com/in/rishabh-kumar-3354a5262/"
                     target="_blank"><img src="images/linkedin.svg" width="24" /> <span class="d-md-none">Follow me on Linkedin</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white fs-6 px-3 py-2 p-md-1 d-flex align-items-center gap-3" aria-current="page" href="https://github.com/shueb-anwar" target="_blank"><img
+                  <a class="nav-link text-white fs-6 px-3 py-2 p-md-1 d-flex align-items-center gap-3" aria-current="page" href="https://github.com/kumarrishabh0125" target="_blank"><img
                       src="images/github.svg" width="24" /> <span class="d-md-none">View My Public Repository</span></a>
                 </li>
               </ul>
@@ -62,7 +62,7 @@
           <div class="row">
             <div class="col-md-8">
               <p class="h2 mb-3">ABOUT ME &#128578; </p>
-              <h1><span class="badge bg-primary">SHUEB ANWAR</span></h1>
+              <h1><span class="badge bg-primary">RISHABH KUMAR</span></h1>
               <h3><span class="badge bg-warning">London, GB</span></h3>
               <p>Welcome and thanks for visiting the website to know more about me. This is my personal blog and explain
                 about my after office skills. Please visit linkedin profile if you want to see my professional profile
@@ -71,7 +71,7 @@
                 and automate your business digitally.</p>
             </div>
             <div class="col-md-4">
-              <img src="images/profile-pic-pixelate.jpg" class="w-100 rounded" />
+              <img src="images/profile-pic-pixelate.png" class="w-100 rounded" />
             </div>
           </div>
 
@@ -181,7 +181,7 @@
                 <input class="form-check-input" type="checkbox" value="Yes, I consent" id="gdpr-consent"
                   aria-describedby="invalidCheck3Feedback" required name="GDPR Consent">
                 <label class="form-check-label" for="gdpr-consent">
-                  I am happy to receive updates from Shueb Anwar by email ( inc social media ) and SMS
+                  I am happy to receive updates from Rishabh Kumar by email ( inc social media ) and SMS
                 </label>
                 <div id="invalidCheck3Feedback" class="invalid-feedback">
                   You must agree before submitting.
