--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <div class="row">
       <div class="col-md-4 bg-primary text-light sidebar-container">
         <nav class="navbar navbar-expand-lg sidebar navbar-dark bg-primary p-2 p-md-4 flex-md-column align-items-md-end">
-          <a class="navbar-brand" href="#"><img class="logo-main" src="images/logo-2.svg" alt="Rishabh Kumar - Frontend Developer" /></a>
+          <a class="navbar-brand fs-2 text-center" href="/" style="line-height: 1">RISHABH KUMAR
+            <small class="d-block fw-lighter fs-6" style="letter-spacing: 6px">React Developer</small>
+          </a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarButtons"
             aria-controls="navbarButtons" aria-expanded="false" aria-label="Toggle navigation">
